syntax = "proto3";

option go_package = "Mini-project-2/gRPC";

package gRPC;

service MessageService
{
   rpc Join (JoinRequest) returns (stream Message){}
   rpc Leave (LeaveRequest) returns (LeaveResponse){}
   rpc Send (stream Message) returns (MessageAck){}
}

message JoinRequest {
    string chan_name = 1;
    string senders_name = 2;
    int64 lamportTime = 3;
}

message Message {
    string sender = 1;
    string message = 2;
    int64 lamportTime = 3;
}

message MessageAck{
    string status = 1;
}

message LeaveRequest {
    string status = 1; 
}

message LeaveResponse{
    string status = 1;
}
